# cpp-template

./: .clang-format  .gitignore  CMakeLists.txt  run.sh  vcpkg.json
src/: main.cc  simple_fuse.h
